Fix intro-box alignment

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body{
     align-items: center;
     flex-shrink: 0;
     height: 450px;
-    width: auto;
+    min-width: 800px;
   }
   
   .intro-box {
@@ -79,14 +79,9 @@ body{
     background: rgba(0, 0, 0, 0.2);
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
   }
 
-  .intro-top {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-  }
 
   .intro-bottom {
     display: flex;
@@ -103,6 +98,8 @@ body{
       display: flex;
       flex-direction: column;
       justify-content: center;
+      flex-wrap: wrap;
+      width: 200px;
   }
 
   button {
